<resources>
    <string name="app_name">Deviant X</string>
    <string name="lower_letters">abcdefghijklmnopqrstuvwxyz</string>
    <string name="upper_letters">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits">0123456789</string>
    <string name="pswd">0123456789@#$%^&amp;+=!*_ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="login_success">Login Successful</string>
    <string name="invalid_pswd">Invalid Password</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="empty_pswd">Password should not be empty!</string>
    <string name="empty_usrnm">Username should not be empty!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="signing_in">Signing In…</string>
    <string name="internetconnection">This App needs Internet Connection, You are currently not connected to internet</string>
    <string name="errortxt">Something went wrong we are working over it.Please try after some time</string>
    <string name="Timeout">Request Time out. Please try again.</string>
    <string name="networkerror">Network error,Please try after some time</string>
    <string name="login_failed">Login Failed</string>
    <string name="empty_email">Email should not be empty!</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="unmatch_email">Email does not match</string>
    <string name="unmatch_pswd">Password does not match</string>
    <string name="registering">Registering</string>
    <string name="please_wait">Please Wait...</string>
    <string name="acc_success">Account Created Successfully</string>
    <string name="empty_old_pswd">Old password should not be empty!</string>
    <string name="unmatch_old_pswd">Old password does not match</string>
    <string name="empty_new_pswd"> New password should not be empty!</string>
    <string name="invalid_new_pswd">New Password is invalid</string>
    <string name="empty_conf_pswd"> Confirm password should not be empty!</string>
    <string name="unmatch_conf_pswd">Confirm password does not match</string>
    <string name="center_address">\t\tAddress</string>
    <string name="center_search">\t\tSearch</string>
    <string name="get_started">Get Started</string>
    <string name="account_must">You must have an account to continue</string>
    <string name="signup_email">Sign up with Email</string>
    <string name="signup_with">Or Sign up with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="by_registering">By registering, you confirm that you accept our <font color='#01C6DB'>Terms and Conditions</font> of use of Deviant X.</string>
    <string name="have_acc">Do you have an account?</string>
    <string name="login">Login</string>
    <string name="signin_deviantx">Sign In on Deviant X</string>
    <string name="create_uname">Create your username</string>
    <string name="note_usename">It will show like that on your profile.</string>
    <string name="enter_email">Enter your email</string>
    <string name="note_email">Use at least 8 characters, a number and a symbol.</string>
    <string name="confirm_email">Confirm your email</string>
    <string name="note_confirm_email">It must be identical to the previous one.</string>
    <string name="password">Password</string>
    <string name="hint_password">Mypassw</string>
    <string name="note_password">For your security, your password should include:</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="note_confirm_password">It must be identical to the previous one.</string>
    <string name="lower_case">A lower case letter</string>
    <string name="special_case">Special Character</string>
    <string name="upper_case">An upper case letter</string>
    <string name="number">A number</string>
    <string name="characters">8 - 25 characters</string>
    <string name="info_deviantx">For more information about how Deviant X collects, uses and protects your personal information, read Deviant X\'s </string>
    <string name="continu">Continue</string>
    <string name="privacy_policy"><u>Privacy Policy</u>.</string>
    <string name="privacy_policy_u">Privacy Policy.</string>
    <string name="pls_check_email">We have sent you a code. Please Check Your Email.</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="note_terms_conditions">By registering, you are accepting the <font color='#01C6DB'><u>Terms and Conditions</u></font> of use of Deviant X.</string>
    <string name="agree">I Agree</string>
    <string name="reject">Reject</string>
    <string name="setup_wallet">Set up your wallet</string>
    <string name="enter_wallet_name">Enter a name for your wallet</string>
    <string name="note_wallet_name">This will be your default wallet.</string>
    <string name="save">Save</string>
    <string name="login_deviantx">Login on Deviant X</string>
    <string name="forgot_pswd">Forgot password?</string>
    <string name="get_help">Get Help</string>
    <string name="recover_acc">Recover your account</string>
    <string name="send">Send</string>
    <string name="note_recovery_acc">Enter your Deviant X email that you used to sign-in. We will send you an email with instructions to recover your account.</string>
    <string name="hint_email">\t\ttest@deviantcoin.io</string>
    <string name="mini_deviant">Mini Deviant</string>
    <string name="dashboard">Dashboard</string>
    <string name="explore_coins">Explore Coins</string>
    <string name="account_list">Account List</string>
    <string name="tools">Tools</string>
    <string name="my_wallet_list">My Wallet Lists</string>
    <string name="app_settings">App Settings</string>
    <string name="help">Help</string>
    <string name="add_coins_to_wallet">Add coins to your wallet</string>
    <string name="ready">Ready</string>
    <string name="more_coins">More than 500 coins available</string>
    <string name="search_ct">Search for Cryptocurrencies and Tokens</string>
    <string name="search">Search</string>
    <string name="coin_name">Coin Name</string>
    <string name="Prmsns_nec">Permission necessary</string>
    <string name="Prmsns_extrnl_strg">External Storage permission is necessary</string>
    <string name="Prmsns_cam">Camera permission is necessary</string>
    <string name="note_modify_wallet">To modify your wallet, slide to the right, to</string>
    <string name="my_wallet">My Wallet</string>
    <string name="coin_value">coin_value</string>
    <string name="security_wallet">Security Wallet</string>
    <string name="test_wallet">Test Wallet</string>
    <string name="create_new_wallet">+ Create new wallet</string>
    <string name="add_coins_want">Add all the coins you want.</string>
    <string name="note_add_coins">To add to your portfolio, slide to the right.</string>
    <string name="note_see_info">To see information, slide to left.</string>
    <string name="add_wallet">+ Add New Wallet</string>
    <string name="my_coins_list">My Coins List</string>
    <string name="noti_text">Mana Trading Competetion: 1,875,000 MANA 2 week</string>
    <string name="empty_wallet">Wallet Name is empty</string>
    <string name="submit">Submit</string>
    <string name="confirm_recovery_phase_center">\t\tConfirm Recovery Phase</string>
    <string name="enter_seed">Enter Recovery Phrase</string>
    <string name="note_seed_rec">Note: Please use two spaces between words</string>
    <string name="close">Close</string>
    <string name="terms_conditions_service">Terms and Conditions of Service</string>
    <string name="legal_disclaimer">Legal disclaimer</string>
    <string name="tc_risk_factors">⦁\tRisk factors</string>
    <string name="tc_dev_categ">Deviant X will not be responsible for any losses, damages, or claims from the following mentioned categories:</string>
    <string name="tc_dev_categ_a">a) User errors such as forgotten passwords, wrong payments, and deletion of wallets.</string>
    <string name="tc_dev_categ_b">b) Software problems of any Cryptocurrency related software or service, e.g., malware affecting user wallets, corrupted wallet files, unsafe Cryptographic libraries and/or any Cryptocurrency related softwares/services.</string>
    <string name="tc_dev_categ_c">c) Security problems experienced by the user of any Cryptocurrency related software or service such as an unauthorized access to user wallets/accounts.</string>
    <string name="tc_dev_categ_d">d) Actions of a third party such as bankruptcy of a service provider, information security attacks on service providers, and fraudulent activities by third parties.</string>
    <string name="tc_dev_categ_e">e) Data loss due to damaged storage device resulting in technical failures in the hardware of the user.</string>
    <string name="tc_adhe_tax">⦁\tAdherence with tax obligations</string>
    <string name="tc_adhe_tax_desc">The end user of the Deviant X wallet is solely responsible for taxes that apply to their cryptocurrency transactions. The owners at Deviant X are in NO way responsible for tax determination that apply to the transactions being made.</string>
    <string name="tc_trade_invest"><![CDATA[⦁\tTrading & Investment risks]]></string>
    <string name="tc_trade_invest_desc">Any transaction involving currencies involves risks including, but not limited to the potential for changing economic conditions that may substantially affect the price or liquidity of a currency. Investments may also be susceptible to sharp rises/falls as the relevant market values fluctuate. There is always a considerable exposure to risk in any cryptocurrency related exchange transaction. It is advisable to use only risk capita when speculating in such markets.</string>
    <string name="tc_etrade">⦁\tE-trading risks</string>
    <string name="tc_etrade_desc">Online trading has inherent risks due to system responses and access times that will vary due to market conditions/system performances and many other factors. Users are thereby requested to carefully review the rules and regulations of the exchanges offering the system / listing you intend to trade. It is mandatory for all users to understand the additional risks in store before trading.</string>
    <string name="tc_arbitration">⦁\tArbitration</string>
    <string name="tc_arbitration_desc">The user of the wallet agrees to arbitrate any dispute arising from or in connection with the wallet or this disclaimer, except for disputes related to logos, copyrights, trademarks, trade names, and patents.</string>
    <string name="tc_nil_war">⦁\tNil warranty</string>
    <string name="tc_nil_war_desc">Services, content, data, and materials provided on this wallet will be without any warranties.</string>
    <string name="tc_liability">⦁\tLiability scenarios</string>
    <string name="tc_liability_desc">The owners, or contributors to the wallet, will not be liable for any damages of any kind, including but not limited to: loss of use, loss of profits, loss of data arising out of or in any way connecting with the wallet usage. The owners and contributors of Deviant X wallet, will also NOT be responsible for the actions, decisions, or other behaviors taken/not taken by you pertaining the usage of the wallet.</string>
    <string name="tc_dev_final">This disclaimer was amended for the last time on November 1st 2018</string>
    <string name="airdrop_camp">Airdrops Campaigns</string>
    <string name="note_airdrop_camp">To create an Airdrop campaigns your need to have a minimum of 500 DEV.</string>
    <string name="select_ad_type">Select the type of Airdrop</string>
    <string name="hint_sel_ad_type">Social is recommended to get followers on social networks.</string>
</resources>