<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <include layout="@layout/toolbar_center_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_send"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginLeft="@dimen/def_margin"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginRight="@dimen/def_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin50"
            android:gravity="center"
            android:text="@string/recover_acc"
            android:textColor="@color/white"
            android:textSize="@dimen/text22"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/def_margin"
            android:text="@string/note_recovery_acc"
            android:textColor="@color/white"
            android:textSize="@dimen/def_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin30"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_email"
                android:textColor="@color/white"
                android:textSize="@dimen/def_lbl_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_edt_height"
                android:layout_marginTop="@dimen/margin5"
                android:background="@drawable/rec_white_c2"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/padding10"
                android:paddingLeft="@dimen/padding10"
                android:paddingEnd="@dimen/padding10"
                android:paddingRight="@dimen/padding10"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/def_text_size" />

        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/def_btn_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rec_orange_gradient"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/def_text_size"
        android:textStyle="bold" />


</RelativeLayout>